--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ plugins {
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
-archivesBaseName = project.archives_base_name
+archivesBaseName = project.archives_base_name\
 version = project.mod_version
 group = project.maven_group
 
@@ -19,12 +19,12 @@ repositories {
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:1.16.5"
-    mappings "net.fabricmc:yarn:1.16.5+build.6:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.11.3"
+    minecraft "com.mojang:minecraft:1.17"
+    mappings "net.fabricmc:yarn:1.17+build.13:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.11.6"
             
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.32.5+1.16"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.36.0+1.17"
 }
 
 processResources {
@@ -42,13 +42,8 @@ tasks.withType(JavaCompile).configureEach {
 	// If Javadoc is generated, this must be specified in that task too.
 	it.options.encoding = "UTF-8"
 
-	// The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
-	// JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
-	// We'll use that if it's available, but otherwise we'll use the older option.
-	def targetVersion = 8
-	if (JavaVersion.current().isJava9Compatible()) {
-		 it.options.release = targetVersion
-	}
+	// Minecraft 1.17 (21w19a) upwards uses Java 16.
+	it.options.release = 16
 }
 
 java {
