--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.6
-	loader_version=0.11.3
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.13
+	loader_version=0.11.6
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,5 +13,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = como-client
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.32.5+1.16
+	fabric_version=0.36.0+1.17
