--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
-	loader_version=0.11.6
+	minecraft_version=1.18-pre2
+	yarn_mappings=1.18-pre2+build.1
+	loader_version=0.12.5
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = net.como.client
-	archives_base_name = como-client
+	maven_group = com.example
+	archives_base_name = fabric-example-mod
 
 # Dependencies
-	fabric_version=0.37.0+1.17
+	fabric_version=0.42.4+1.18
