--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -26,6 +27,9 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	// Discord RPC @ https://github.com/Vatuu/discord-rpc
+	implementation "com.github.Vatuu:discord-rpc:${project.discord_rpc_version}"
 }
 
 processResources {
