--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.1
-	loader_version=0.12.9
+	minecraft_version=1.18.2-pre2
+	yarn_mappings=1.18.2-pre2+build.2
+	loader_version=0.13.3
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = como-client
 
 # Dependencies
-	fabric_version=0.44.0+1.18
+	fabric_version=0.47.6+1.18.2
 	discord_rpc_version=1.6.2
