--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2-pre2
-	yarn_mappings=1.18.2-pre2+build.2
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.1
 	loader_version=0.13.3
 
 # Mod Properties
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = como-client
 
 # Dependencies
-	fabric_version=0.47.6+1.18.2
+	fabric_version=0.47.8+1.18.2
 	discord_rpc_version=1.6.2
