--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -24,6 +24,6 @@ jobs:
           # Stage the file, commit and push
           # Hopefully this shouldn't cause another one to trigger since if there are no changes, there shouldn't be a commit.
           git add FEATURES.md
-          git commit -m "Auto-generated FEATURES.md"
+          git commit -m "Auto-generate FEATURES.md"
           git push
         continue-on-error: true
