--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ dependencies {
 	// Discord RPC @ https://github.com/Vatuu/discord-rpc
 	include(implementation("com.github.Vatuu:discord-rpc:${project.discord_rpc_version}"))
 
+    implementation('io.github.spair:imgui-java-binding:1.82.2')
+    implementation('io.github.spair:imgui-java-lwjgl3:1.82.2') {
+        exclude group: "org.lwjgl"
+    }
+    ["linux", "linux-x86", "macos", "windows", "windows-x86"].each {
+        implementation("io.github.spair:imgui-java-natives-$it:1.82.2")
+    }
+
 }
 
 processResources {
