--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	// Discord RPC @ https://github.com/Vatuu/discord-rpc
 	include(implementation("com.github.Vatuu:discord-rpc:${project.discord_rpc_version}"))
 
+    // Imgui @ https://github.com/SpaiR/imgui-java
     implementation('io.github.spair:imgui-java-binding:1.82.2')
     implementation('io.github.spair:imgui-java-lwjgl3:1.82.2') {
         exclude group: "org.lwjgl"
