--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,12 @@ dependencies {
 	include(implementation("com.github.Vatuu:discord-rpc:${project.discord_rpc_version}"))
 
     // Imgui @ https://github.com/SpaiR/imgui-java
-    implementation('io.github.spair:imgui-java-binding:1.82.2')
-    implementation('io.github.spair:imgui-java-lwjgl3:1.82.2') {
+    include(implementation("io.github.spair:imgui-java-binding:${project.imgui_version}"))
+    include(implementation("io.github.spair:imgui-java-lwjgl3:${project.imgui_version}")) {
         exclude group: "org.lwjgl"
     }
     ["linux", "linux-x86", "macos", "windows", "windows-x86"].each {
-        implementation("io.github.spair:imgui-java-natives-$it:1.82.2")
+        include(implementation("io.github.spair:imgui-java-natives-$it:${project.imgui_version}"))
     }
 
 }
