--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,11 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.0.960
+	mod_version = 1.0.0.922
 	maven_group = net.como.client
 	archives_base_name = como-client
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
 	discord_rpc_version=1.6.2
+  imgui_version=1.82.2
