--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,3 +3,9 @@ jdk:
 
 before_install:
   - bash ensure-jitpack-java-17 install
+
+install:
+  - if ! bash ensure-jitpack-java-17 use; then source ~/.sdkman/bin/sdkman-init.sh; fi
+  - java -version
+  - chmod +x gradlew
+  - ./gradlew publishToMavenLocal
