--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,9 +2,9 @@ jdk:
   - openjdk17
 
 before_install:
-  - bash ensure-jitpack-java-17 install
+  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
+  - source ./install-jdk.sh --feature 17 --license GPL
 
 install:
-  - if ! bash ensure-jitpack-java-17 use; then source ~/.sdkman/bin/sdkman-init.sh; fi
   - java -version
   - ./gradlew publishToMavenLocal
