--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-    minecraft_version=1.19.4
-    yarn_mappings=1.19.4+build.2
-    loader_version=0.14.14
+# Fabric Properties (check these on https://fabricmc.net/develop)
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.0.0.993
-	maven_group = net.como.client
-	archives_base_name = como-client
+mod_version = 1.0.0.993
+maven_group = net.como.client
+archives_base_name = como-client
 
 # Dependencies
-    fabric_version=0.78.0+1.19.4
-	discord_rpc_version=1.6.2
-  	imgui_version=1.82.2
+fabric_version=0.83.0+1.20
+
+# Feature specific dependencies
+discord_rpc_version=1.6.2
+imgui_version=1.82.2
